--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,17 @@
+<!-- main navbar -->
 <div class="header-container">
     <div class="header-heading">
-        elewa group
+        <a href="#"><img src="../../assets/Logo_White_arvoyx.svg" alt="group logo"></a>
     </div>
+    <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Social impact</a></li>
+        <li><a href="#">Invest</a></li>
+        <li><a href="#">Venture Labs</a></li>
+        <li><a href="#">Brands</a></li>
+        <li><a href="#">Careers</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
 </div>
+
