:sparkles: added working routes for the three pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!-- Rendering child components -->
-<app-social-impact></app-social-impact>
+<app-header></app-header>
+<!-- Rendering components based on their associated angular routes -->
+<router-outlet></router-outlet>
