--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,10 +4,11 @@
         <a href="#"><img src="../../assets/Logo_White_arvoyx.svg" alt="group logo"></a>
     </div>
     <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Social impact</a></li>
-        <li><a href="#">Invest</a></li>
+        <!-- Giving the home and landing page the social impact link for assesment purposes -->
+        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/aboutUS">About us</a></li>
+        <li><a routerLink="/socialImpact">Social impact</a></li>
+        <li><a routerLink="/invest">Invest</a></li>
         <li><a href="#">Venture Labs</a></li>
         <li><a href="#">Brands</a></li>
         <li><a href="#">Careers</a></li>
