:lipstick: added back ground images and improved navbar visibility

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,9 @@
-<p>about works!</p>
+<div class="about-container">
+    <!-- displaying the nav bar and background images-->
+    <app-header></app-header>
+    <div>
+    <div class="overlay"></div>
+    <img src="https://res.cloudinary.com/dyl3rncv3/image/upload/v1679650530/elewa-team_digqu3.jpg"
+        alt="background-image">
+    </div>
+</div>
