--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
     <ul class="menu">
         <!-- Giving the home and landing page the social impact link for assesment purposes -->
         <li><a routerLink="/">Home</a></li>
-        <li><a routerLink="/aboutUS">About us</a></li>
+        <li><a routerLink="/aboutUs">About us</a></li>
         <li><a routerLink="/socialImpact">Social impact</a></li>
         <li><a routerLink="/invest">Invest</a></li>
         <li><a href="#">Venture Labs</a></li>
