--- a/src/app/invest/invest.component.html
+++ b/src/app/invest/invest.component.html
@@ -1,4 +1,6 @@
 <div class="invest-container">
-    <!-- <app-header></app-header> -->
-<p>invest works!</p>
+    <!-- displaying the nav bar and background images-->
+    <app-header></app-header>
+    <div class="overlay"></div>
+    <img src="https://res.cloudinary.com/dyl3rncv3/image/upload/v1679982347/elewa-group-website/hero-Images/dark-to-light_xrat5g.jpg" alt="background-image">
 </div>
