--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,4 +1,3 @@
-
 /* styling the header container */
 .header-container {
     position: absolute;
@@ -13,26 +12,32 @@
     border-bottom: 1px solid white;
     padding-top: 50px;
     margin-left: 50px;
-    
+    color: #f3f1f1
 }
 
 /* styling the logo image in the header container*/
 .header-heading {
-    width: 50%;
-    margin: 16px 0;
+   width: 50%;
+   align-items: left;
+   margin: 16px 0;
+   font-size: var(--elewa-group-website-font-size-elewa-text);
+   font-family: var(--elewa-group-website-dmsans-italic);
+   
 }
 /* styling the navigation menu items in the header container */
  .menu {
     list-style-type: none;
+    /* displaying the menu list with no styles and setting them in a flex display */
     display: flex;
     justify-content: space-between;
     list-style-type: none;
     width: 50%;
+    margin: 32px 0;
  }
 
  /* styling the list anchor tags */
  .menu li a{
-    color: #f3f1f1;
+    color: #f3f2f2;
     text-decoration: none;
     
  }
