--- a/src/app/social-impact/social-impact.component.html
+++ b/src/app/social-impact/social-impact.component.html
@@ -3,4 +3,8 @@
     <app-header></app-header>
     <img src="https://res.cloudinary.com/dyl3rncv3/image/upload/v1679910469/elewa-group-website/hero-Images/pexels-bg-edit_bb4znx.jpg"
         alt="background-image">
-</div>
+        <div class="hero-content" *ngFor="let item of content">
+            <p>{{item.socialHeroText}}</p>
+            <h3>{{item.socialHeroHeader}}</h3>
+        </div>
+    </div>
