--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -20,3 +20,24 @@
     background-color: rgba(0, 0, 0, 0.5);
     /* Black background with 50% opacity */
 }
+/* styling hero content */
+.hero-content {
+    position: absolute;
+    color: white;
+    margin-top: 350px;
+    width: 60%;
+    margin-left: 50px;
+}
+
+.hero-content h2 {
+    font-size: 24px;
+}
+/* Enlarging and positioning the headers */
+.hero-content h3 {
+    font-size: 15px;
+    padding-top: 200px;
+}
+
+.hero-content h1 {
+    font-size: 72px;
+}
