:art: :lipstick: added footer stylings and structure

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,61 @@
-<p>footer works!</p>
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+<div class="footer-overlay">
+<div class="footer-container">
+    <hr>
+    <div class="links">
+        <div class="headquater-links">
+            <h4><a href="#">Headquaters</a></h4>
+            <p><a href="#">The Promenade, 19
+                <br>
+            General
+                <br>
+            Mathenge Rd
+                <br>
+            Nairobi, Kenya</a></p>
+        </div>
+        <div class="contact-links">
+            <h4><a href="#">Contacts</a></h4>
+            <ul class="contact-list">
+                <li><a href="#">T +254 78 92 27 755</a></li>
+                <li><a href="#">E info@elewa.ke</a></li>
+            </ul>
+        </div>
+        <div class="navigation-links">
+            <h4><a href="#">Navigation</a></h4>
+            <ul class="nav-list">
+                <li><a routerLink="/aboutUs">About us</a></li>
+                <li><a routerLink="/socialImpact">Social impact</a></li>
+                <li><a routerLink="/invest">Invest</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="brand-links">
+            <h4><a href="#">Brands</a></h4>
+            <ul class="brand-list">
+                <li><a href="#">Elewa</a></li>
+                <li><a href="#">Italanta</a></li>
+                <li><a href="#">Venture Labs</a></li>
+            </ul>
+        </div>
+        <div class="privacy-links">
+            <h4><a href="#">Privacy</a></h4>
+            <ul class="privacy-list">
+                <li><a href="#">Terms & conditions</a></li>
+                <li><a href="#">Cookie Preferences</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer-logos">
+        <div class="elewa-logo">
+            <a href="#"><img src="../../assets/Logo_White_arvoyx.svg" alt="group logo"></a>
+        </div>
+        <div class="socials">
+            <i class='bx bxl-facebook'></i>
+            <i class='bx bxl-instagram'></i>
+            <i class='bx bxl-linkedin'></i>
+        </div>
+    </div>
+</div>
+</div>
