--- a/src/app/social-impact/social-impact.component.html
+++ b/src/app/social-impact/social-impact.component.html
@@ -8,4 +8,8 @@
             <p>{{item.socialHeroText}}</p>
             <h3>{{item.socialHeroHeader}}</h3>
         </div>
-    </div>
+</div>
+<br>
+<div>
+    <app-footer></app-footer>
+</div>
