--- a/src/app/invest/invest.component.css
+++ b/src/app/invest/invest.component.css
@@ -13,8 +13,8 @@
     /* Positioned relative to the nearest positioned ancestor */
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
     /* Black background with 50% opacity */
 }
