--- a/src/app/social-impact/social-impact.component.html
+++ b/src/app/social-impact/social-impact.component.html
@@ -10,6 +10,41 @@
         </div>
 </div>
 <br>
+<div class="business-overlay">
+<div class="business-section" *ngFor="let item of content">
+    <div class="project-numbers">
+        <div class="project-items">
+        <p>{{item.peopleTrained}}+</p>
+        <h4>{{item.trainedText}}</h4>
+        </div>
+        <div class="project-items">
+        <p>{{item.carreersLaunched}}k</p>
+        <h4>{{item.careerText}}</h4>
+        </div>
+        <div class="project-items">
+        <p>{{item.projectsFinished}}+</p>
+        <h4>{{item.projectText}}</h4>
+        </div>
+        <div class="project-items">
+        <p>{{item.investors}}</p>
+        <h4>{{item.investText}}</h4>
+        </div>
+    </div>
+    <div class="business-content">
+        <div class="business-image">
+            <img src={{item.businessSectionUrl}} alt="Section Image">
+        </div>
+        <div class="business-text">
+            <h2>{{item.businessHeader}}</h2>
+            <p>{{item.businessContent}}</p>
+        </div>
+
+
+    </div>
+
+</div>
+</div>
+<br>
 <div>
     <app-footer></app-footer>
 </div>
