:lipstick: :art: added the giving back section

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -7,7 +7,7 @@
 }
 /* styling the footer parent element */
 .footer-container {
-    margin-top: 1820px;
+    /* margin-top: 1820px; */
     color: white;
     padding-top: 80px;
     padding-left: 50px;
