--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -43,4 +43,18 @@
 }
 .profiles{
     margin-top: 824px;
+    display: flex;
+    height: 400px;
+}
+
+.profile-cards img {
+    border-radius: 50%;
+    height: 230px;
+    width: 200px;
+
+}
+.profile-cards a {
+    text-decoration: none;
+    color: black;
+
 }
