--- a/src/app/social-impact/social-impact.component.css
+++ b/src/app/social-impact/social-impact.component.css
@@ -145,3 +145,35 @@
         font-weight: 500;
         padding-top: 35px;
 }
+/* End of giving back styling */
+
+.identity-overlay {
+        background: rgba(0, 0, 0, 1);
+        width: 100%;
+        height: 800px;
+}
+.identity-section {
+        display: flex;
+        padding-top: 85px;
+}
+.identity-content {
+        display: block;
+        color: white;
+        width: 50%;
+        padding-left: 100px;
+        padding-top: 120px;
+}
+.identity-image {
+        padding-left: 125px;
+        border-radius: 80px;
+}
+
+.identity-content h1 {
+        font-size: 70px;
+}
+.identity-content p{
+        padding-top: 30px;
+        font-size: 45px;
+}
+
+/* End of identity stylying section */
