--- a/src/app/social-impact/social-impact.component.css
+++ b/src/app/social-impact/social-impact.component.css
@@ -177,3 +177,33 @@
 }
 
 /* End of identity stylying section */
+/* styling of testimonial section */
+
+.testimonials {
+        height: 600px;
+}
+.testimonial-header {
+        padding-top: 50px;
+        text-align: center;
+}
+.impact-projects-logo{
+        display: flex;
+        justify-content: center;
+        
+}
+.impact-projects-logo img {
+        height: 230px;
+        width: 230px;
+        padding: 35px;
+        padding-top: 50px;
+}
+.call-to-action {
+        font-size: 45px;
+        height: 30px;
+        text-align: center;
+        padding-top: 75px;
+}
+.call-to-action a{
+        color: black;
+        text-decoration: none;
+}
